# hekasch

./: .gitignore  CLEANUP_SUMMARY.md  Cargo.toml  README.md  STOCK_CRAWLER_README.md  hekasch.code-workspace  stock_infos_2026-01-26.json  stock_infos_enriched.json  stock_infos_new.json  stock_infos_report.csv  stock_infos_report.html  stock_infos_report.min.html  taiwan_stocks_complete_2026-01-26.html  taiwan_stocks_complete_2026-01-26.md
src/: company_info.rs  lib.rs  main.rs  main_backup_20260121_123726.rs  markdown.rs  stock_crawler.rs  stock_enricher.rs
